--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,32 @@
+:root{
+    --amarillosuave: rgb(248, 248, 130);
+    --blanco: rgb(244, 247, 213);
+    --grisoscuro:rgb(37, 37, 34);
+}
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
+
 body{
     background-color: rgb(82, 81, 81);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 1008px;
+    border:3px solid black;
+    padding: auto;
+    margin: auto;
 }
 header{
-    background-color: rgba(255, 255, 0, 0.267);
-    width: 1024px;
+    background-color: var(--amarillosuave);
+    width: 100%;
     display: block;
     padding: auto;
     padding-bottom: 0px;
     margin: auto;
-    border:solid black;
+    
     font-family: Arial, Helvetica, sans-serif;
     z-index: 0;
 }
@@ -28,201 +40,55 @@ h1{
     text-align: center;
 }
 
-.menu{
-    margin:auto;
-    margin-bottom: 10px;
-    margin-left: 8px;
+.contenedor-menu{
+    width: 100%;
+    height: 40px;
+    background-color: var(--grisoscuro);
     padding: auto;
-    display: inline-block;
-    z-index: 150;
+    margin: auto;
 }
 
-.menu > li{
-    float: left;
-    list-style: none;
-}
-
-.menu li a{
-    background-color: rgb(248, 248, 133);
+.contenedor-menu a{
     text-decoration: none;
-    padding: 10px 12px;
+    color: var(--amarillosuave);
+    font-weight: bold;
+    padding: 10px;
     display: block;
     text-align: center;
-    color: black;
-    font-weight: bold;
-    width: 120px;
 }
 
-.menu li a:hover{
-    background-color: rgba(250, 243, 243, 0.966);
-    padding: 9px 12px;
-    display:block;
-    border-bottom: solid black;
-    z-index: 150;
+.contenedor-menu a:hover{
+    background-color: var(--amarillosuave);
+    color: var(--grisoscuro);
+    text-decoration: 2px underline;
+    width: 100%;
 }
 
-.menu li ul{
-    display: none;
+.menu{
     list-style: none;
-    min-width: 120px;
-    position: absolute;
+    display: flex;
+    justify-content: space-around;
 }
 
-.menu li:hover > ul{
-    display: block;
-}
-
-.menu li ul li{
-    position: relative;
-}
-
-.menuli ul li ul{
+.submenu {
+    background-color: var(--grisoscuro);
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    position:absolute;
+    display: none;
+    width: 150px;
     
-    top:0px;
+}
+
+
+.boton-menu:hover > .submenu{
+    display: block;
 }
 
 main{
-    max-width: 1024px;
-    display: flex;
-    margin:auto;
+    background-color: var(--blanco);
+    width: 100%;
     padding: auto;
-    background-color: rgb(248, 248, 133);
-    border: solid black;
-}
-
-section{
-    max-width: 500px;
-    padding: auto;
-    display: inline-block;
-}
-
-article{
-    display: block;
     margin: auto;
-    padding: 10px;
-    max-width: 350px;
-    background-color: white;
-}
-
-@keyframes slide{
-    0% { transform: translateX(0);}
-    10% { transform: translateX(0);}
-
-    15% { transform: translateX(-100%);}
-    30% { transform: translateX(100%);}
-
-    35% { transform: translateX(200%);}
-    50% { transform: translateX(200%);}
-
-    0% { transform: translateX(300%);}
-    0% { transform: translateX(300%);}
-
-    0% { transform: translateX(400%);}
-    0% { transform: translateX(400%);}
-
-    0% { transform: translateX(500%);}
-    0% { transform: translateX(500%);}
-}
-
-
-.wrapper{
-    max-width: 424px;
-    margin: 0 auto;
-}
-
-.slider{
-    position: relative;
-}
-
-.slides{
-    position: relative;
-    display: flex;
-    overflow: hidden;
-}
-
-.slide{
-    width: 100%;
-    flex-shrink: 0;
-    animation-name: slide;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-}
-
-.slides:hover .slide{
-    animation-play-state: paused;
-}
-
-.slide img {
-    width: 100%;
-    vertical-align: top;
-}
-
-.slide a {
-    width: 100%;
-    display: inline-block;
-    position: relative;
-}
-
-.caption{
-    color: white;
-    text-shadow: 1px 1px black;
-    font-size: 8vw;
-    position: absolute;
-    bottom: 8vw;
-    right: 4vw;
-}
-
-.slide:target{
-    animation-name:none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 50;
-}
-
-.slider-controler{
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
-    padding: 5px;
-    background-color: rgba(0,0,0,0.5);
-    z-index: 100;
-}
-
-.slider-controler li{
-    margin: 0 0.5rem;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.slider-controler a{
-    display: inline-block;
-    vertical-align: top;
-    text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-}
-
-@media only screen and (min-width:424px){
-    .slide{
-        width: 424px;
-    }
-    .caption{
-        font-size: 5vw;
-        bottom: 5vw;
-        right: 2.5vw;
-    }
-}
-
-aside{
-    display: inline-block;
-    max-width: 250px;
-    padding: 10px;
-    text-align: justify;
-    background-color: white;
 }
