--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,11 @@ h1{
 
 .contenedor-menu{
     width: 100%;
-    height: 40px;
     background-color: var(--grisoscuro);
     padding: auto;
     margin: auto;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
 }
 
 .contenedor-menu a{
@@ -55,6 +56,8 @@ h1{
     padding: 10px;
     display: block;
     text-align: center;
+    width: 100%;
+    line-height: 100%;
 }
 
 .contenedor-menu a:hover{
