--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,300&display=swap');
 :root{
     --amarillosuave: rgb(248, 248, 130);
     --amarilloscuro: rgb(243, 232, 79);
@@ -14,7 +15,7 @@
 
 body{
     background-color: rgb(82, 81, 81);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Nunito, Arial, Helvetica, sans-serif;
     width: 100%;
     padding: auto;
     margin: auto;
@@ -85,6 +86,7 @@ h1{
     display: block;
 }
 
+/* Configuración de página de inicio*/
 main{
     background-color: var(--blanco);
     width: 100%;
@@ -113,7 +115,8 @@ aside{
     margin: 20px;
 }
 
-.color-canary{
+/* Configuración de página de canarios clasificados por color*/
+.color-canary, .yellow{
     width: 100%;
     display: block;
     padding: 6.5%;
@@ -131,4 +134,21 @@ aside{
 .lipocromo img, .melanicos img{
     width:100%;
     border-radius: 100%;
+}
+
+.lipocromo a, .melanicos a{
+    color: var(--grisoscuro);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.lipocromo a:hover, .melanicos a:hover{
+    display: inline-block;
+    text-decoration: underline;
+}
+
+/* configuracion de pagina canarios amarillos */
+
+.yellow{
+    display: block;
 }
