--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
     margin: auto;
 }
 header{
-    background-color: var(--amarillosuave);
+    background: linear-gradient(90deg,#ffec00 0%, #a29f8e 80%);
     width: 100%;
     display: block;  
     margin: auto;
@@ -36,6 +36,7 @@ img {
 
 h1{
     text-align: center;
+    text-shadow: 4px 4px 2px rgba(248,242,242,0.6);
 }
 
 /* configuracion del menu */
@@ -59,7 +60,6 @@ h1{
     padding: 10px;
     display: inline-block;
     width: 100%;
-    line-height: 100%;
 
 }
 
@@ -113,13 +113,45 @@ article{
     padding: 20px;
 }
 
+.article{
+    background-color: rgba(252, 250, 250, 0.897);
+    border-radius: 20px;
+    margin: 5%;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+.img-article{
+    width: 150%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: auto;
+}
+
+.img-article img{
+    margin: 0;
+}
 aside{
     display: flex;
     flex-flow: column;
-    width:30% ;
-    padding: 20px;
-    margin: 20px;
+    width:85% ;
+    padding: 5%;
+    margin: 5%;
 }
+
+.aside{
+    background-color: rgba(252, 250, 250, 0.897);
+    border-radius: 20px;
+    margin: 5%;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    width: 30%;
+}
+
+.article h2, .aside h2{
+    background: var(--amarillosuave);
+    box-shadow: 3px 3px 5px 0px rgba(71, 53, 53, 0.2);
+}
+
 
 /* Configuración de página de canarios clasificados por color*/
 .color-canary, .yellow{
@@ -127,37 +159,61 @@ aside{
     display: block;
     padding: 6.5%;
 }
+.text{
+    width: 98%;
+    background-color: rgba(245, 245, 245, 0.459);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
 
-.color-canary p{
+.color-canary ul, .color-canary ol, .yellow ul, .yellow ol{
+    padding: 3%;
+}
+
+.color-canary p, .color-canary h2, .color-canary h3, .color-canary h4, .amarillo p, .amarillo h2, .amarillo h3, .amarillo h4{
     max-width: 75%;
 }
 
-.lipocromo, .melanicos{
+.lipocromo, .melanicos, .derivados{
     display: flex;
     justify-content: space-around;
 }
 
-.lipocromo img, .melanicos img{
-    width:100%;
+.lipocromo img, .melanicos img, .derivados img{
+    width: 100%;
     border-radius: 100%;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
-.lipocromo a, .melanicos a{
+.lipocromo a, .melanicos a, .derivados a{
     color: var(--grisoscuro);
     text-decoration: none;
     font-weight: bold;
 }
 
-.lipocromo a:hover, .melanicos a:hover{
+.lipocromo a:hover, .melanicos a:hover, .derivados a:hover{
     display: inline-block;
     text-decoration: underline;
+}
+
+.info{
+    width: 50%;
+    padding: auto;
+    margin: auto;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    background-color: white;
+}
+.info img{
+    width: 100%;
+    margin: auto;
 }
 
 /* configuracion de pagina canarios amarillos */
 
 .yellow{
     display: block;
+    justify-items: center;
 }
+
 
 @media screen and (max-width:800px ) {
     header .contenedor-menu {
@@ -197,6 +253,10 @@ aside{
         display: flex;
         justify-content: space-between;
         font-size: 40px;
+    }
+
+    .video{
+        width: 80%;
     }
 }
   
