--- a/styles.css
+++ b/styles.css
@@ -273,9 +273,10 @@ aside{
    }
   .aside{
       align-self: flex-start;
+      width: 40%;
   }
-  aside, article{
-      font-size: 1rem;
+  .article h2, .aside h2{
+    font-size: 90%;
   }
 }
   
