--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ h1{
     text-decoration: none;
     color: var(--amarillosuave);
     font-weight: bold;
-    font-size: 1em;
     text-align: center;
     padding: 10px;
     display: inline-block;
@@ -74,7 +73,7 @@ h1{
 .menu{
     list-style: none;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .submenu {
@@ -105,7 +104,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox=
 }
 
 section{
-    width: 70%;
+    width: 96%;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
@@ -122,15 +121,10 @@ article{
     border-radius: 20px;
     margin: 5%;
     box-shadow: 10px 10px 5px 0px rgba(248, 247, 247, 0.75);
-}.article figcaption{
-    width: 90%;
 }
 
-
-
-
 .img-article{
-    width: 150%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: left;
@@ -138,25 +132,12 @@ article{
 }
 
 .img-article img{
-    margin: 0;
-}
-aside{
-    
-    width:85% ;
-    padding: 5%;
-    margin: 10%;
-
+    margin: 0%;
+    width: 100%;
 }
 
-.aside{
-    background-color: white;
-    border-radius: 20px;
-    margin: 5%;
-    box-shadow: 10px 10px 5px 0px rgba(253, 253, 253, 0.75);
-    width: 30%;
-}
 
-.article h2, .aside h2{
+.article h2{
     background: var(--amarillosuave);
     box-shadow: 3px 3px 5px 0px rgba(71, 53, 53, 0.2);
 }
@@ -195,12 +176,14 @@ aside{
     width: 100%;
     border-radius: 100%;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    padding: 3.5%;    
 }
 
 .lipocromo a, .melanicos a, .derivados a{
     color: var(--grisoscuro);
     text-decoration: none;
     font-weight: bold;
+    align-self: center;
 }
 
 .lipocromo a:hover, .melanicos a:hover, .derivados a:hover{
@@ -225,6 +208,15 @@ aside{
 .yellow{
     display: block;
     justify-items: center;
+}
+table{
+    width: 70%;
+    margin: 0 0 1.5em;
+    
+}
+td{
+    padding: 2% 4%;
+    text-align: center;
 }
 
 
@@ -272,15 +264,17 @@ aside{
         width: 80%;
     }
    section{
-       display: flex;
-       flex-direction: column;
+       display: block;
+       width: 90%;
    }
-  .aside{
-      align-self: flex-start;
-      width: 40%;
-  }
+  
   .article h2, .aside h2{
     font-size: 90%;
+  }
+  
+  article{
+      display: block;
+      width: 100%;
   }
 }
   
